--- a/index.ipynb
+++ b/index.ipynb
@@ -205,22 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.co'"
+       "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith('') # False\n"
+    "\"art.vandelay@vandelay.co\".endswith('com') # False\n"
    ]
   },
   {
